[package]
name = "iperf3-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
libc = "0.2.174"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
